@@ -1,8 +1,13 @@
 <!DOCTYPE suite SYSTEM "http://beust.com/testng/testng-1.0.dtd" >
   
-<suite name="Single" verbose="10"
-    
-  >
+<suite name="Single" verbose="10">
+
+<!--
+
+<listeners>
+  <listener class-name="test.methodinterceptors.FastTestsFirstInterceptor" />
+</listeners>
+-->
 
 <!--
 <suite-files>
@@ -20,7 +25,7 @@
 <!--
   <test name="Nested" >
 	<packages>
-		<package name="test.methodinterceptors.MethodInterceptorTest">
+		<package name="test.methodinterceptors.FooTest">
 		</package>
 	</packages>
   </test>
